Release CMTK-1.3.0:


Release CMTK-1.2.2 (2010-02-25):

- Added: cmtk::SQLite wrapper class for sqlite3 library, with tests.
- Added: bundled still-unused sqlite3 "library" for future use in
    image/relationship database.
- Added: "imagemath" now has "min-value" and "fill" operations.
- Improved: "imagemath" can now set, unset, and change padding value
    repeatedly, so different images can be read with different padding values
    (Issue #4597)
- Improved: better separation of code for DICOM vs non-DICOM configuration.
- Improved: code for PGM output (8 and 16 bit) now more consistent and less
    complex. Also unified API for 8bit  and 16bit write functions.
- Added: bitwise "and" operation in "imagemath" tool. Added test for this.
- Testing: added tests for cmtk::TypedArraySimilarity class.
- Fixed: TypedArraySimilarity::GetPeakSignalToNoiseRatio was broken due to
    negated GetMeanSquaredDifference return value.
- Testing: added tests for cmtk::ScalarImageSimilarity class (and, by
    extension, cmtk::TypedArraySimilarity as well).
- Removed: obsolete "ImageIO" class was removed; the only two remaining former
    derived classes, cmtk::PGM and cmtk::DICOM, will now be used directly, as
    they only have static member functions left.
- Fixed: initialize memory for Analyze header with zeroes in "mk_analyze_hdr"
    tool.
- Testing: added tests for "mk_analyze_hdr" tool.
- Testing: added tests for "mat2dof" tool.
- Fixed: "mip" tool did not compute projection images with proper pixel sizes
    based on the input volume.
- Testing: added tests for "mip" tool.
- Improved: "mip" tool now sets black and white points automatically if not
    provided by the user.
- Testing: added test for "Rohlfing" single-image intensity-consistent
    filtering in "filter" tool.
- Removed: further removal of obsolete PGM and DICOM I/O code.


Release CMTK-1.2.1 (2010-02-01):

- Added: "statistics" tool now optionally outputs mask-based results for all