@@ -1,5 +1,9 @@
 Release CMTK-1.3.0:
 
+- Refactored: created a new class for histogram-based intensity matching,
+    cmtk::HistogramMatchingLookup.
+- Added: first library-level tests for TypedArray class.
+
 
 Release CMTK-1.2.2 (2010-02-25):
 
